--- a/client/pages/styles.css
+++ b/client/pages/styles.css
@@ -107,7 +107,19 @@ body {
     font-size: 18px;
     margin-top: auto; /* Nuevo */
 }
-
+.finalizar-compra{
+  border: none;
+  border-radius: 10px;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #02832d;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 18px;
+  margin-top: auto; /* Nuevo */
+}
   
   .card button:hover {
     opacity: 0.7;
